LAYOUT: fixed overflow of comment area (issue #28)
found by Sean during extensive testing ;) should behave better now.

--- a/css/standard013.css
+++ b/css/standard013.css
@@ -354,6 +354,9 @@ ul.tricks li div div.card3 span.comment{
 
 span.comment{
  border: 3px solid green;
+ max-height:6em;
+ overflow: auto;
+ word-wrap: break-word;
 }
 
 ul.tricks li div div span.comment span{
